--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -681,7 +681,7 @@ StatementView.statementSummary={0} transactions. Total expenses: {1}. Total rece
 
 #-------- custom filter part --------
 #See CustomFilter.png
-CustomFilterPanel.nature=Kind
+CustomFilterPanel.nature=Type
 CustomFilterPanel.expenses.toolTip=Check this box to select expenses
 CustomFilterPanel.receipts.toolTip=Check this box to select receipts
 CustomFilterPanel.error.checkStatus=Please check at least one of the "{0}" and "{1}" boxes
@@ -698,23 +698,23 @@ MainMenu.help.tooltip=Opens help page for Yapbam
 #It introduces a dialog and a new panel in the preferences dialog
 
 #Dialog (See ReportError.png)
-ErrorManager.sendReport.message=<html><h1>Sorry, an error occured.</h1>Would you accept to send an error report to the Yapbam team ?<br>It would greatly help us to improve the quality of this sofware.
-ErrorManager.report.dontSend.tootip=Closes the dialog without send the error report
-ErrorManager.report.send.tootip=Closes the dialog and send the error report
+ErrorManager.sendReport.message=<html><h1>Sorry, an error occurred.</h1>Would you accept to send an error report to the Yapbam team ?<br>It would greatly help us to improve the quality of this software.
+ErrorManager.report.dontSend.tootip=Closes the dialog box without sending the error report
+ErrorManager.report.send.tootip=Closes the dialog box and sends the error report
 
 GenericCheckBox.rememberDecision=Remember my decision
-GenericCheckBox.rememberDecision.tooltip=<html>Check this box to have Yapbam remember your decision and not ask you again<br>(you could always change your mind using the Preferences dialog).</html>
+GenericCheckBox.rememberDecision.tooltip=<html>Check this box if you want Yapbam to remember your decision and not ask you again.<br>You can change your decision using the Preferences dialog box.</html>
 
 #Preference panel
 ErrorManager.preferences.title=Error reports
-ErrorManager.preferences.tooltip=This tab allows you to configure error report sending when Yapbam encounters errors.
-ErrorManager.preferences.introduction=<html>You can help us improving the quality of this software !<br>Please allow Yapbam to send error reports when a problem occurs.</html> 
-ErrorManager.preferences.sendWithoutAsking=Send without asking
-ErrorManager.preferences.sendWithoutAsking.tooltip=Select this option to always send reports without asking.
-ErrorManager.preferences.neverSendNorAsking=Do send, and stop asking me !
-ErrorManager.preferences.neverSendNorAsking.tooltip=Select this option to prevent Yapbam sending reports nor asking you again.
+ErrorManager.preferences.tooltip=From this tab, you can configure the sending of error reports when Yapbam encounters errors.
+ErrorManager.preferences.introduction=<html>You can help us improve the quality of this software!<br>Please allow Yapbam to send error reports when an error occurs.</html> 
+ErrorManager.preferences.sendWithoutAsking=Send report without asking
+ErrorManager.preferences.sendWithoutAsking.tooltip=Select this option to send reports without being asked.
+ErrorManager.preferences.neverSendNorAsking=Do not send, and stop asking me!
+ErrorManager.preferences.neverSendNorAsking.tooltip=Select this option to stop Yapbam from sending reports or asking you again.
 ErrorManager.preferences.alwaysAsk=Always ask me
-ErrorManager.preferences.alwaysAsk.tooltip=Select this option to always have Yapbam asking you before sending reports
+ErrorManager.preferences.alwaysAsk.tooltip=Select this option for Yapbam to always ask you before sending reports
 #-------- End of error reporting part --------
 
 #-------- update part --------
@@ -730,24 +730,24 @@ PreferencesDialog.AutoUpdate.ifAvailable.autoInstall=Download and install
 
 #This dialog will be displayed when Yapbam need to inform the user that a new version is available
 #There was already a dialog like this one for telling that an update was available, here are the changes to the wordings used in the dialog
-MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>What do you like to do ?</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>What would you like to do ?</BODY></HTML>
 MainMenu.CheckUpdate.installNow=Install now
 MainMenu.CheckUpdate.cancel=Do nothing
 
 #This dialog is displayed when the user choose to download and install the new version
-Update.Downloading.title=Downloading ...
-Update.Downloading.message=Version {0} is downloading.
+Update.Downloading.title=Downloading...
+Update.Downloading.message=Version {0} is being downloaded.
 
 #This message is displayed at the end of the manual update, when the downloading is finished
 Update.Downloaded.title=New version downloaded
-Update.Downloaded.message=<html>Version {0} has downloaded.<br>This update will be installed when you will quit Yapbam.</html>
+Update.Downloaded.message=<html>Version {0} is downloaded.<br>This update will be installed when you quit Yapbam.</html>
 Update.Downloaded.quitNow=Quit now
 
 #This message is displayed if the download fails
 #In this dialog, there is the standard cancel button and a retry button
 Update.DownloadFailed.title=Downloading failed
 Update.DownloadFailed.message=Sorry, an error occurs while downloading Yapbam update.
-Update.DownloadFailed.retry=Retry 
+Update.DownloadFailed.retry=Retry
 
 #The update process is divided in two parts.
 #First, the updated files are downloaded.
@@ -755,7 +755,7 @@ Update.DownloadFailed.retry=Retry
 #This message is displayed during the second part of the update process.
 Update.Install.title=Installing ...
 Update.Install.message=Please wait, Yapbam is installing an update.
-Update.Install.failure=<html>Sorry, an unexpected error has occured.<br>Your Yapbam copy may be corrupted.<br>We strongly recommend you to reinstall Yapbam from the official download site : http://www.yapbam.net</html>
+Update.Install.failure=<html>Sorry, an unexpected error has occurred.<br>Your Yapbam copy may be corrupted.<br>We strongly recommend you to reinstall Yapbam from the official download site : http://www.yapbam.net</html>
 Update.Install.success=Yapbam has been successfully updated
 #-------- end of the update part --------
 
@@ -763,16 +763,16 @@ Update.Install.success=Yapbam has been successfully updated
 #Yapbam has now a welcome screen that displays some shortcuts and tips
 #Menu that allow to re-open the welcome screen during Yapbam session
 Welcome.menuTitle=Welcome screen
-Welcome.MenuToolTip=<html>Opens Yapbam welcome dialog.<br>This dialog provides useful shortcuts and some tips.</html>
+Welcome.MenuToolTip=<html>Opens the Yapbam welcome screen.<br>This dialog provides useful shortcuts and some tips.</html>
 
 #The welcome screen itself
 Welcome.introduction=<html>Welcome to <b>Yapbam</b></html>
 Welcome.showAtStartup=Show at startup
-Welcome.showAtStartup.tooltip=Check this box to show this dialog at every yapbam startup
+Welcome.showAtStartup.tooltip=Check this box to see this dialog at every Yapbam startup
 
 #Title of the shortcuts panel
 Welcome.shorcuts.title=Useful shortcuts
-Welcome.sampleData=Open sample data file
+Welcome.sampleData=View a sample data file
 Welcome.sampleData.openFails=<html>An error occurred reading the sample file \!<br>Maybe this file ({0}) is corrupted</html>
 Welcome.sampleData.tooltip=Opens a sample file
 Welcome.tutorial=<html>View the tutorial<BR>(Internet connection needed)</html>
@@ -785,29 +785,29 @@ Welcome.tip.title=Tip of the day
 #tooltips of navigation buttons 
 Welcome.firstTip.tooltip=Displays the first tip
 Welcome.previousTip.tooltip=Displays the previous tip
-Welcome.tipNumber.tooltip=Type a tip number here to display it
-Welcome.nextTip.tooltip=Displays next tip
-Welcome.lastTip.tooltip=Displays last tip
+Welcome.tipNumber.tooltip=Enter the tip number to view it
+Welcome.nextTip.tooltip=Displays the next tip
+Welcome.lastTip.tooltip=Displays the last tip
 
 #The tips
-Tip.1=<html>Yapbam appearence can be set in the preferences.<hr style="width:40%">To change it, select <b>{1}</b> in the <b>{0}</b> menu, then go to the <b>{2}</b> tab</html>
-Tip.2=<html>You can define alert thresholds on each account.<hr style="width:40%">By default, an alert (icon is shown in the title of <b>{0}</b>) tab is thrown when the balance become negative.<br>You can change this threshold in the <b>{1}</b> tab.<br>You can also define an alert when the balance exceeds a specified amount.</html>
-Tip.3=<html>Your periodical transactions can be generated automaticaly.<hr style="width:40%">To do so, you may define some <b>periodical transactions</b> in <b>{0}</b> tab.<br>An easier way is to select a transaction, then <b>{1}</b> in the contextual menu (right-clic on the transaction).</html>
-Tip.4=<html>Think of using the right clic !.<hr style="width:40%">A right clic on a transaction gives you fast access to edition, duplication or deletion.</html>
-Tip.5=<html>The <b>{0}</b> tab allows you to make a lot of changes:<hr style="width:40%">- Edit, create, suppress periodical transactions.<br>- Rename accounts, change initial balance, alert thresholds, payment modes. Manage check books<br>- Rename categories<br>- etc...</li></ul></html>
-Tip.6=<html>You can speedup your entries with keyboard shortcuts.<hr style="width:40%">When you edit a date, the <b>up arrow</b> goes to next day, la <b>down arrow</b> goes the day before.<br>Similarly, for number entries (for exemple, the number of checks in a checkbook), these arrows increase or decrease the edited number.</html>
+Tip.1=<html>Yapbam appearance can be set in the preferences.<hr style="width:40%">To change it, select <b>{1}</b> in the <b>{0}</b> menu, and go to the <b>{2}</b> tab.</html>
+Tip.2=<html>You can define alert thresholds for each account.<hr style="width:40%">By default, an alert (icon is shown in the title of <b>{0}</b> tab) is raised when the balance become negative.<br>You can change this threshold in the <b>{1}</b> tab.<br>You can also define an alert when the balance exceeds a specified amount.</html>
+Tip.3=<html>Your periodical transactions can be generated automatically.<hr style="width:40%">To do so, you may define some <b>periodical transactions</b> in the <b>{0}</b> tab.<br>An easier way is to select a transaction, and <b>{1}</b> in the context-sensitive menu (right-click on the transaction).</html>
+Tip.4=<html>Think of using the right click!<hr style="width:40%">A right click on a transaction gives you fast access to edition, duplication or deletion.</html>
+Tip.5=<html>The <b>{0}</b> tab allows you to make a lot of changes:<hr style="width:40%">- Edit, create, suppress periodical transactions.<br>- Rename accounts, change initial balance, alert thresholds, payment modes. Manage check books<br>- Rename categories<br>- etc.</li></ul></html>
+Tip.6=<html>You can speed up your entries with keyboard shortcuts.<hr style="width:40%">When you edit a date, the <b>UP arrow</b> increases the date by one day, and the <b>DOWN arrow</b> decreases the date by one day.<br>Similarly, for number entries (for example, the number of checks in a checkbook), these arrows increase or decrease the number by one.</html>
 #-------- end of the welcome screen part --------
 
 #-------- Changes in the budget view --------
 #Adds some optional columns and lines to the budget view
-#See budget.png (sums and averages are null, because this functionnality is not yet developped).
+#See budget.png (sums and averages are null, because this functionality is not yet developped).
 BudgetPanel.averageColumn.checkBox=Average column
 BudgetPanel.averageColumn.checkBox.tooltip=Check this box to add an average column to the table.
-BudgetPanel.sumColumn.checkBox=Sum column
-BudgetPanel.sumColumn.checkBox.tooltip=Check this box to add a sum column to the table.
-BudgetPanel.sumLine.checkBox=Sum line
-BudgetPanel.sumLine.checkBox.tooltip=Check this box to add a sum line to the table.
-BudgetPanel.sum=SUM
+BudgetPanel.sumColumn.checkBox=Total column
+BudgetPanel.sumColumn.checkBox.tooltip=Check this box to add a total column to the table.
+BudgetPanel.sumLine.checkBox=Totals line
+BudgetPanel.sumLine.checkBox.tooltip=Check this box to add a total line to the table.
+BudgetPanel.sum=TOTAL
 BudgetPanel.average=AVERAGE
 #-------- End of changes in the budget view --------
 
