--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -708,7 +708,7 @@ GenericCheckBox.rememberDecision.tooltip=<html>Check this box if you want Yapbam
 #Preference panel
 ErrorManager.preferences.title=Error reports
 ErrorManager.preferences.tooltip=From this tab, you can configure the sending of error reports when Yapbam encounters errors.
-ErrorManager.preferences.introduction=<html>You can help us improve the quality of this software!<br>Please allow Yapbam to send error reports when an error occurs.</html> 
+ErrorManager.preferences.introduction=<html>You can help us improve the quality of this software!<br>Please allow Yapbam to send error us reports when an error occurs.</html> 
 ErrorManager.preferences.sendWithoutAsking=Send report without asking
 ErrorManager.preferences.sendWithoutAsking.tooltip=Select this option to send reports without being asked.
 ErrorManager.preferences.neverSendNorAsking=Do not send, and stop asking me!
@@ -746,7 +746,7 @@ Update.Downloaded.quitNow=Quit now
 #This message is displayed if the download fails
 #In this dialog, there is the standard cancel button and a retry button
 Update.DownloadFailed.title=Downloading failed
-Update.DownloadFailed.message=Sorry, an error occurs while downloading Yapbam update.
+Update.DownloadFailed.message=Sorry, error in downloading the Yapbam update.
 Update.DownloadFailed.retry=Retry
 
 #The update process is divided in two parts.
@@ -773,7 +773,6 @@ Welcome.showAtStartup.tooltip=Check this box to see this dialog at every Yapbam 
 #Title of the shortcuts panel
 Welcome.shorcuts.title=Useful shortcuts
 Welcome.sampleData=View a sample data file
-Welcome.sampleData.openFails=<html>An error occurred reading the sample file \!<br>Maybe this file ({0}) is corrupted</html>
 Welcome.sampleData.tooltip=Opens a sample file
 Welcome.tutorial=<html>View the tutorial<BR>(Internet connection needed)</html>
 Welcome.tutorial.tooltip=Opens the tutorial web page
@@ -791,7 +790,7 @@ Welcome.lastTip.tooltip=Displays the last tip
 
 #The tips
 Tip.1=<html>Yapbam appearance can be set in the preferences.<hr style="width:40%">To change it, select <b>{1}</b> in the <b>{0}</b> menu, and go to the <b>{2}</b> tab.</html>
-Tip.2=<html>You can define alert thresholds for each account.<hr style="width:40%">By default, an alert (icon is shown in the title of <b>{0}</b> tab) is raised when the balance become negative.<br>You can change this threshold in the <b>{1}</b> tab.<br>You can also define an alert when the balance exceeds a specified amount.</html>
+Tip.2=<html>You can define alert thresholds for each account.<hr style="width:40%">By default, an alert (icon is shown in the title of the <b>{0}</b> tab) is raised when the balance become negative.<br>You can change this threshold value in the <b>{1}</b> tab.<br>You can also define an alert when the balance exceeds a specified amount.</html>
 Tip.3=<html>Your periodical transactions can be generated automatically.<hr style="width:40%">To do so, you may define some <b>periodical transactions</b> in the <b>{0}</b> tab.<br>An easier way is to select a transaction, and <b>{1}</b> in the context-sensitive menu (right-click on the transaction).</html>
 Tip.4=<html>Think of using the right click!<hr style="width:40%">A right click on a transaction gives you fast access to edition, duplication or deletion.</html>
 Tip.5=<html>The <b>{0}</b> tab allows you to make a lot of changes:<hr style="width:40%">- Edit, create, suppress periodical transactions.<br>- Rename accounts, change initial balance, alert thresholds, payment modes. Manage check books<br>- Rename categories<br>- etc.</li></ul></html>
@@ -811,11 +810,22 @@ BudgetPanel.sum=TOTAL
 BudgetPanel.average=AVERAGE
 #-------- End of changes in the budget view --------
 
+
+
+#==================================================================================================================================================
+#Not yet sent to Sharada
+#==================================================================================================================================================
+
+#-------- Changes in the welcome screen --------
+Welcome.sampleData.openFails=<html>An error occurred reading the sample file\!<br>Maybe this file ({0}) is corrupted</html>
+#-------- End of changes in the welcome screen --------
+
 #-------- Changes in save dialog --------
 saveDialog.dangerousLocation.message=<html><b>Warning !</b><br>You are about to save your account data in the Yapbam installation directory.<br><br><b>Your data will probably be erased</b> during next Yapbam update.<br>We strongly recommend you to save your data elsewhere.<br><br>If you like danger, you can continue, at your own risk.</html>
 #-------- End of changes in save dialog --------
 
-#-------- fixes to statement view --------
+#-------- Fixes to statement view --------
+#These wordings were not localized in the "statement" tab
 #The title of the receipt column
 StatementView.receipt=Receipt
 #The title of the debt column
