--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -708,7 +708,7 @@ GenericCheckBox.rememberDecision.tooltip=<html>Check this box if you want Yapbam
 #Preference panel
 ErrorManager.preferences.title=Error reports
 ErrorManager.preferences.tooltip=From this tab, you can configure the sending of error reports when Yapbam encounters errors.
-ErrorManager.preferences.introduction=<html>You can help us improve the quality of this software!<br>Please allow Yapbam to send error us reports when an error occurs.</html> 
+ErrorManager.preferences.introduction=<html>You can help us improve the quality of this software!<br>Please allow Yapbam to send us error reports when an error occurs.</html> 
 ErrorManager.preferences.sendWithoutAsking=Send report without asking
 ErrorManager.preferences.sendWithoutAsking.tooltip=Select this option to send reports without being asked.
 ErrorManager.preferences.neverSendNorAsking=Do not send, and stop asking me!
