--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -136,6 +136,9 @@ MainMenu.QuestionMark=?
 MainMenu.QuestionMark.Mnemonic=?
 MainMenu.QuestionMark.ToolTip=Shows help
 
+MainMenu.help=Help
+MainMenu.help.tooltip=Opens help page for Yapbam
+
 MainMenu.About=About...
 MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Shows information about this program (author, version ...)
@@ -495,6 +498,12 @@ CustomFilterPanel.amount.maximum=Maximum amount
 CustomFilterPanel.amount.to=and
 CustomFilterPanel.amout.minimum=Minimum amount
 
+CustomFilterPanel.nature=Type
+CustomFilterPanel.expenses.toolTip=Check this box to select expenses
+CustomFilterPanel.receipts.toolTip=Check this box to select receipts
+CustomFilterPanel.error.checkStatus=Please check at least one of the "{0}" and "{1}" boxes
+CustomFilterPanel.error.natureStatus=Please check at least one of the "{0}" and "{1}" boxes
+
 CustomFilterPanel.date.all=All
 CustomFilterPanel.date.all.toolTip=Select this to not filter on the transaction date
 CustomFilterPanel.date.equals=Equals to
@@ -561,6 +570,14 @@ BudgetPanel.perMonth=Month-wise allocation
 BudgetPanel.perMonth.tooltip=Gets the monthly budget allocation
 BudgetPanel.perYear=Year-wise allocation
 BudgetPanel.perYear.tooltip=Gets the yearly budget allocation
+BudgetPanel.averageColumn.checkBox=Average column
+BudgetPanel.averageColumn.checkBox.tooltip=Check this box to add an average column to the table.
+BudgetPanel.sumColumn.checkBox=Total column
+BudgetPanel.sumColumn.checkBox.tooltip=Check this box to add a total column to the table.
+BudgetPanel.sumLine.checkBox=Totals line
+BudgetPanel.sumLine.checkBox.tooltip=Check this box to add a total line to the table.
+BudgetPanel.sum=TOTAL
+BudgetPanel.average=AVERAGE
 
 ErrorManager.message=An error occurred \!\n Current operation is aborted.
 ErrorManager.title=ALERT \!\!\!
@@ -676,28 +693,8 @@ StatementView.startBalance=Balance at the beginning of the period: {0}
 StatementView.endBalance=Balance at the end of the period: {0}
 StatementView.statementSummary={0} transactions. Total expenses: {1}. Total receipts: {2}
 
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
-
-#-------- custom filter part --------
-#See CustomFilter.png
-CustomFilterPanel.nature=Type
-CustomFilterPanel.expenses.toolTip=Check this box to select expenses
-CustomFilterPanel.receipts.toolTip=Check this box to select receipts
-CustomFilterPanel.error.checkStatus=Please check at least one of the "{0}" and "{1}" boxes
-CustomFilterPanel.error.natureStatus=Please check at least one of the "{0}" and "{1}" boxes
-#-------- end of custom filter part --------
-
-#-------- menu "help" part --------
-MainMenu.help=Help
-MainMenu.help.tooltip=Opens help page for Yapbam
-#-------- end of "help" part --------
-
 #-------- Error Reporting part --------
-#This version allows error reports to be send when an exception occurs in Yapbam
-#It introduces a dialog and a new panel in the preferences dialog
-
-#Dialog (See ReportError.png)
+#Dialog
 ErrorManager.sendReport.message=<html><h1>Sorry, an error occurred.</h1>Would you accept to send an error report to the Yapbam team ?<br>It would greatly help us to improve the quality of this software.
 ErrorManager.report.dontSend.tootip=Closes the dialog box without sending the error report
 ErrorManager.report.send.tootip=Closes the dialog box and sends the error report
@@ -774,7 +771,6 @@ Welcome.showAtStartup.tooltip=Check this box to see this dialog at every Yapbam 
 Welcome.shorcuts.title=Useful shortcuts
 Welcome.sampleData=View a sample data file
 Welcome.sampleData.tooltip=Opens a sample file
-Welcome.sampleData.openFails=<html>An error occurred reading the sample file\!<br>Maybe this file ({0}) is corrupted</html>
 Welcome.tutorial=<html>View the tutorial<BR>(Internet connection needed)</html>
 Welcome.tutorial.tooltip=Opens the tutorial web page
 Welcome.faq=<html>View the FAQ<BR>(Internet connection needed)</html>
@@ -798,18 +794,12 @@ Tip.5=<html>The <b>{0}</b> tab allows you to make a lot of changes:<hr style="wi
 Tip.6=<html>You can speed up your entries with keyboard shortcuts.<hr style="width:40%">When you edit a date, the <b>UP arrow</b> increases the date by one day, and the <b>DOWN arrow</b> decreases the date by one day.<br>Similarly, for number entries (for example, the number of checks in a checkbook), these arrows increase or decrease the number by one.</html>
 #-------- end of the welcome screen part --------
 
-#-------- Changes in the budget view --------
-#Adds some optional columns and lines to the budget view
-#See budget.png (sums and averages are null, because this functionality is not yet developped).
-BudgetPanel.averageColumn.checkBox=Average column
-BudgetPanel.averageColumn.checkBox.tooltip=Check this box to add an average column to the table.
-BudgetPanel.sumColumn.checkBox=Total column
-BudgetPanel.sumColumn.checkBox.tooltip=Check this box to add a total column to the table.
-BudgetPanel.sumLine.checkBox=Totals line
-BudgetPanel.sumLine.checkBox.tooltip=Check this box to add a total line to the table.
-BudgetPanel.sum=TOTAL
-BudgetPanel.average=AVERAGE
-#-------- End of changes in the budget view --------
+#---------------------------------------------------------------------------------------------------------------------------------
+# Added or modified since last translation
+
+#-------- Changes in the welcome screen --------
+Welcome.sampleData.openFails=<html>An error occurred reading the sample file\!<br>Maybe this file ({0}) is corrupted</html>
+#-------- End of changes in the welcome screen --------
 
 #-------- Changes in save dialog --------
 saveDialog.dangerousLocation.message=<html><b>Warning !</b><br>You are about to save your account data in the Yapbam installation directory.<br><br><b>Your data will probably be erased</b> during next Yapbam update.<br>We strongly recommend you to save your data elsewhere.<br><br>If you like danger, you can continue, at your own risk.</html>
