--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -812,3 +812,12 @@ StatementView.receipt=Receipt
 #The title of the debt column
 StatementView.debt=Debt
 #-------- End of fixes to statement view --------
+
+#-------- AccountsSummaryView --------
+AccountsSummary.title=Accounts summary
+AccountsSummary.tooltip=Summary of all accounts
+AccountsSummary.CheckedBalance=Checked balance
+AccountsSummary.CurrentBalance=Current balance
+AccountsSummary.FinalBalance=Final balance
+#-------- End of AccountsSummaryView --------
+
