--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -166,7 +166,7 @@ MainMenu.web.yapbam=Visit Yapbam web site
 MainMenu.web.yapbam.tooltip=Opens Yapbam home page (requires an Internet connection)
 
 BalanceHistory.title=Balance history
-BalanceHistory.toolTip=Day-to-day balance chart
+BalanceHistory.graph.toolTip=Day-to-day balance chart
 BalanceHistory.balance=Balance of {0}: {1}
 BalanceHistory.chart.toolTip=Move the vertical bar down to view the balance of another day
 BalanceHistory.showGrid=Show grid
@@ -813,7 +813,7 @@ StatementView.receipt=Receipt
 StatementView.debt=Debt
 #-------- End of fixes to statement view --------
 
-#-------- AccountsSummaryView --------
+#-------- AccountsSummary View --------
 AccountsSummary.title=Accounts summary
 AccountsSummary.tooltip=Summary of all accounts
 AccountsSummary.CheckedBalance=Checked balance
@@ -821,3 +821,9 @@ AccountsSummary.CurrentBalance=Current balance
 AccountsSummary.FinalBalance=Final balance
 #-------- End of AccountsSummaryView --------
 
+#-------- Balance History view --------
+#Introducing a new sub-panel in the balance history panel
+BalanceHistory.toolTip=Day-to-day balance
+BalanceHistory.graph.title=Chart
+BalanceHistory.transaction.title=Transactions
+BalanceHistory.transaction.tooltip=day-to-day transactions and balance
