--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -827,3 +827,4 @@ BalanceHistory.toolTip=Day-to-day balance
 BalanceHistory.graph.title=Chart
 BalanceHistory.transaction.title=Transactions
 BalanceHistory.transaction.tooltip=day-to-day transactions and balance
+BalanceHistory.transaction.remainingBalance=Remaining balance
