--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -179,7 +179,7 @@ BalanceHistory.alertTooltipAdd=First alert on {0}
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.alerts.toolTip=Select an alert in this menu to view a history of balances of the corresponding account (changes the current filter)
 
-AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rights reserved<br>Version: <b>{1}</b></html>
+AboutDialog.Content=<html>Copyright &copy; 2009-2011 <b>{0}</b> - All rights reserved<br>Version: <b>{1}</b></html>
 AboutDialog.License.TabName=License
 AboutDialog.RelNotes.TabName=Release notes
 AboutDialog.Contributors.TabName=Contributors
@@ -826,5 +826,10 @@ AccountsSummary.FinalBalance=Final balance
 BalanceHistory.toolTip=Day-to-day balance
 BalanceHistory.graph.title=Chart
 BalanceHistory.transaction.title=Transactions
-BalanceHistory.transaction.tooltip=day-to-day transactions and balance
+BalanceHistory.transaction.tooltip=Day-to-day transactions and balance
 BalanceHistory.transaction.remainingBalance=Remaining balance
+
+#-------- New "important news" screen -------
+ImportantNews.title=Important news
+ImportantNews.intro=The latest Yapbam update has resulted in significant changes below
+ImportantNews.0.8.2=The <b>{0}</b> has been moved from <b>{1}</b> tab to <b>{2}</b> tab.<br><br> The purpose of this change is to avoid checking errors. Indeed, in the view <b>{1}</b>, it was possible to check by mistake, a transaction already checked, or belonging to the wrong account.<br>The <b>{0}</b> is now only available in the view <b>{2}</b> when <b>{3}</b> menu item is selected, which makes these errors impossible.
