--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -833,3 +833,22 @@ BalanceHistory.transaction.remainingBalance=Remaining balance
 ImportantNews.title=Important news
 ImportantNews.intro=The latest Yapbam update has resulted in significant changes below
 ImportantNews.0.8.2=The <b>{0}</b> has been moved from <b>{1}</b> tab to <b>{2}</b> tab.<br><br> The purpose of this change is to avoid checking errors. Indeed, in the view <b>{1}</b>, it was possible to check by mistake, a transaction already checked, or belonging to the wrong account.<br>The <b>{0}</b> is now only available in the view <b>{2}</b> when <b>{3}</b> menu item is selected, which makes these errors impossible.
+
+#-------- New preference panel on transaction editing -------
+TransactionEditingPreferencesPanel.title=Transaction editing
+TransactionEditingPreferencesPanel.tooltip=This tab allows you to configure the behaviour of transaction editing
+TransactionEditingPreferencesPanel.alertIfChangeChecked=Alert me if I change a checked transaction
+TransactionEditingPreferencesPanel.alertIfChangeChecked.tooltip=Check this box to be alerted if you change the amount, number or statement id of a checked transaction
+TransactionEditingPreferencesPanel.alertIfDelete=Ask me for confirmation before deleting a transaction
+TransactionEditingPreferencesPanel.alertIfDelete.tooltip=Check this box to be asked for confirmation before deleting a transaction
+TransactionEditingPreferencesPanel.autoFillStatementId=Automatically fill the statement id
+TransactionEditingPreferencesPanel.autoFillStatementId.tooltip=Check this box to automatically fill the statement id of transactions
+TransactionEditingPreferencesPanel.statementBasedOnDate=Based on date
+TransactionEditingPreferencesPanel.statementBasedOnDate.tooltip=Select this button to have statement id based on transaction's date
+TransactionEditingPreferencesPanel.statementBasedOnValueDate=Based on value date
+TransactionEditingPreferencesPanel.statementBasedOnValueDate.tooltip=Select this button to have statement id based on transaction's value date
+TransactionEditingPreferencesPanel.format.title=Format
+TransactionEditingPreferencesPanel.format.long=Long Style (example : {0})
+TransactionEditingPreferencesPanel.format.long.tooltip=Select this button to have long statement id
+TransactionEditingPreferencesPanel.format.short=Short Style (example : {0})
+TransactionEditingPreferencesPanel.format.short.tooltip=Select this button to have short statement id
