--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -837,8 +837,8 @@ ImportantNews.0.8.2=The <b>{0}</b> has been moved from <b>{1}</b> tab to <b>{2}<
 #-------- New preference panel on transaction editing -------
 TransactionEditingPreferencesPanel.title=Transaction editing
 TransactionEditingPreferencesPanel.tooltip=This tab allows you to configure the behaviour of transaction editing
-TransactionEditingPreferencesPanel.alertIfChangeChecked=Alert me if I change a checked transaction
-TransactionEditingPreferencesPanel.alertIfChangeChecked.tooltip=Check this box to be alerted if you change the amount, number or statement id of a checked transaction
+TransactionEditingPreferencesPanel.alertIfChangeChecked=Alert me if I delete or change a checked transaction
+TransactionEditingPreferencesPanel.alertIfChangeChecked.tooltip=Check this box to be alerted if you change the amount, number or statement id of a checked transaction or if you delete it
 TransactionEditingPreferencesPanel.alertIfDelete=Ask me for confirmation before deleting a transaction
 TransactionEditingPreferencesPanel.alertIfDelete.tooltip=Check this box to be asked for confirmation before deleting a transaction
 TransactionEditingPreferencesPanel.autoFillStatementId=Automatically fill the statement id
@@ -852,3 +852,13 @@ TransactionEditingPreferencesPanel.format.long=Long Style (example : {0})
 TransactionEditingPreferencesPanel.format.long.tooltip=Select this button to have long statement id
 TransactionEditingPreferencesPanel.format.short=Short Style (example : {0})
 TransactionEditingPreferencesPanel.format.short.tooltip=Select this button to have short statement id
+
+ModifyCheckedTransactionAlert.title=Checked transaction change
+ModifyCheckedTransactionAlert.message=You are about to change a checked transaction.
+DeleteCheckedTransactionAlert.title=Checked transaction deletion
+DeleteCheckedTransactionAlert.message=You are about to delete a checked transaction.
+DeleteTransactionAlert.title=Transaction deletion
+DeleteTransactionAlert.message=You are about to delete a transaction.
+
+GenericButton.dontAskMeAnyMore=Don't ask me anymore
+
