--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -834,7 +834,7 @@ ImportantNews.title=Important news
 ImportantNews.intro=The latest Yapbam update has resulted in significant changes below
 ImportantNews.0.8.2=The <b>{0}</b> has been moved from <b>{1}</b> tab to <b>{2}</b> tab.<br><br> The purpose of this change is to avoid checking errors. Indeed, in the view <b>{1}</b>, it was possible to check by mistake, a transaction already checked, or belonging to the wrong account.<br>The <b>{0}</b> is now only available in the view <b>{2}</b> when <b>{3}</b> menu item is selected, which makes these errors impossible.
 
-#-------- New preference panel on transaction editing -------
+#-------- New preference panel about transaction editing -------
 TransactionEditingPreferencesPanel.title=Transaction editing
 TransactionEditingPreferencesPanel.tooltip=This tab allows you to configure the behaviour of transaction editing
 TransactionEditingPreferencesPanel.alertIfChangeChecked=Alert me if I delete or change a checked transaction
@@ -862,3 +862,6 @@ DeleteTransactionAlert.message=You are about to delete a transaction.
 
 GenericButton.dontAskMeAnyMore=Don't ask me anymore
 
+#-------- New preference sub-panel about general graphic theme -------
+PreferencesDialog.Theme.title=Theme
+PreferencesDialog.Theme.toolTip=This tab allows you to choose Yapbam's graphical theme
