--- a/src/net/yapbam/gui/tools/currencyNames.properties
+++ b/src/net/yapbam/gui/tools/currencyNames.properties
@@ -13,6 +13,7 @@ HKD=Hong Kong Dollar
 HRK=Croatian Kuna
 HUF=Hugarian Forint
 IDR=Indonesan Rupiah
+ILS=Israeli new sheqel
 INR=Indian Rupee
 ISK=Iceland Krona
 JPY=Japanese Yen
