--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -848,10 +848,17 @@ TransactionEditingPreferencesPanel.statementBasedOnDate.tooltip=Select this butt
 TransactionEditingPreferencesPanel.statementBasedOnValueDate=Based on value date
 TransactionEditingPreferencesPanel.statementBasedOnValueDate.tooltip=Select this button to have statement id based on transaction's value date
 TransactionEditingPreferencesPanel.format.title=Format
-TransactionEditingPreferencesPanel.format.long=Long Style (example : {0})
+TransactionEditingPreferencesPanel.format.long=Long Style (example: {0})
 TransactionEditingPreferencesPanel.format.long.tooltip=Select this button to have long statement id
-TransactionEditingPreferencesPanel.format.short=Short Style (example : {0})
+TransactionEditingPreferencesPanel.format.short=Short Style (example: {0})
 TransactionEditingPreferencesPanel.format.short.tooltip=Select this button to have short statement id
+TransactionEditingPreferencesPanel.format.customized=Customized
+TransactionEditingPreferencesPanel.format.customized.tooltip=Select this button to enter a customized format
+TransactionEditingPreferencesPanel.format.customized.invalidFormat=Invalid format
+TransactionEditingPreferencesPanel.format.customized.sample=(example: {0})
+#translators note: be aware in the following line that the format codes don't depends on the language (yyyy is always yyyy, even in french where it could have been aaaa).
+TransactionEditingPreferencesPanel.format.customizedField.tooltip=<html>Enter the customized format in this field.<ul><li>yyyy: year on 4 digits</li><li>yy: year on 2 digits</li><li>MM: month on two digits</li><li>MMM: short month name (example Jul.)</li><li>MMMM: full month name</li><li>w: Week in year</li><li>W: Week in month</li></ul></html>
+TransactionEditingPreferencesPanel.okDisabledCauseFormat=The date format entered in the "{0}" tab is wrong
 
 #Alert dialogs
 ModifyCheckedTransactionAlert.title=Checked transaction change
